--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Brainspa
+title: brainspa
 email: info@brainspa.nl
 description: >
   'Inzicht, focus en energie. Om te doen wat je wil doen, om te worden wie je bent. Door je brein en geest vrij te maken van ongewenste automatische patronen, komt er vrijheid en energie om vanuit je eigen kracht je leven vorm te geven. Wat wij doen Neurofeedback, biofeedback, Mindfulness oefeningen en coaching wordt geïntegreerd.'
