professionals in workshops

--- a/_config.yml
+++ b/_config.yml
@@ -617,6 +617,8 @@ prose:
               value: kinderen
             - name: zakelijk
               value: zakelijk
+            - name: professionals
+              value: professionals
       - name: "parent"
         field:
           element: "hidden"
