--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -18,6 +18,12 @@
   tijd: 09:00 - 17:00 uur
   duur: 4 dagen (2x2)
 
+- datum: 17-12-2015
+  titel: Brein & Bewustzijn
+  locatie: Zutphen
+  tijd: 09:00 - 17:00 uur
+  duur: 1 dag
+  
 - datum: 28-01-2016
   titel: Brein & Bewustzijn
   locatie: Zutphen
