footer and build

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ markdown: kramdown
 port: 4000
 permalink: pretty
 
-dev: y
+dev: n
 
 exclude: ['CNAME', 'README.md', 'PSD', 'node_modules', 'package.json', 'gruntfile.js']
 
