--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ prose:
   ignore: ['.gitignore', '_config.yml', 'CNAME', 'gruntfile.js', 'forms.yml', 'package.json', '_includes', '_layouts', 'build', 'links.jsonp']
   siteurl: "http://www.brainspa.nl"
   relativeLinks: 'http://www.brainspa.nl/links.jsonp'
-  media: "/assets/img/"
+  media: "assets/img"
   metadata:
     _posts/doelgroepen:
       - name: "layout"
