parent ook bij analyse

--- a/_config.yml
+++ b/_config.yml
@@ -665,6 +665,10 @@ prose:
         field:
           element: "hidden"
           value: "analyse"
+      - name: "parent"
+        field:
+          element: "hidden"
+          value: "zakelijk"
       - name: "class"
         field:
           element: "hidden"
